<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myCourse_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorDefault"
        android:theme="@style/AppTheme.AppBarOverlay"/>

    <!-- Row 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:id="@+id/question_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/question"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/questionnaires"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/quiz_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorYellow"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/exam"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/quizzes"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/exercises_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorLightBlue"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/classroom"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/exercises"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <!-- Row 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:id="@+id/material_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorGreen"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/folder"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal"
                    android:text="@string/material"
                    android:textSize="12sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/board_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorRed"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/sticky_note"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bulletin_board"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/assignments_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorBlue"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/homework"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/assignments"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>



    <!-- Row 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:id="@+id/profile_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorBrown"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/slating_flag"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/profile"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/message_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorSky"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/mailbox"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/message_box"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/attendance_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp" android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorPurple"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/tasks"
                    android:padding="10dp"
                    tools:ignore="ContentDescription"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/attendance_history"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>



</LinearLayout>